deploy/sas-bases/overlays/network/istio/components/sas-data-agent-services/resources.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sas-data-agent-content
spec:
  host: sas-data-agent-content
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: sas-ingress-istio
          path: /dataAgentContent/
          ttl: 0s

---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: sas-data-agent-management
spec:
  host: sas-data-agent-management
  trafficPolicy:
    loadBalancer:
      consistentHash:
        httpCookie:
          name: sas-ingress-istio
          path: /dataAgentManagement/
          ttl: 0s

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-data-agent-content
    sas.com/admin: namespace
  name: sas-data-agent-content
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /dataAgentContent
    - uri:
        prefix: /dataAgentContent/
    route:
    - destination:
        host: sas-data-agent-content
    timeout: 300s

---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  annotations:
    sas.com/kustomize-base: base
  labels:
    app.kubernetes.io/name: sas-data-agent-management
    sas.com/admin: namespace
  name: sas-data-agent-management
spec:
  gateways:
  - public-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        exact: /dataAgentManagement
    - uri:
        prefix: /dataAgentManagement/
    route:
    - destination:
        host: sas-data-agent-management
    timeout: 300s
